csv's separados, lectura correcta del csv de municipios

--- a/MadridElections.ipynb
+++ b/MadridElections.ipynb
@@ -8,9 +8,244 @@
     "\n",
     "## Objetivo del presente trabajo ##\n",
     "\n",
-    "> El presente trabajo tiene como objetivo analizar los resultados de las pasadas elecciones del 4 de mayo en Madrid. Para ello se utlizarán los resultados electorales oficiales del siguiente enlace [https://resultados2021.comunidad.madrid/Mesas/es]. Se analizarán los resultados a nivel global de la Comunidad de Madrid, para luego pasar a un análisis más pormenorizado de la siguiente forma: Madrid Ciudad, conjunto de ciudades de relevancia y el conjunto de ciudades y pueblos fuera de los principales núcleos de población.\n",
+    "El presente trabajo tiene como objetivo analizar los resultados de las pasadas elecciones del 4 de mayo en Madrid. Para ello se utlizarán los resultados electorales oficiales del siguiente enlace [https://resultados2021.comunidad.madrid/Mesas/es]. Se analizarán los resultados a nivel global de la Comunidad de Madrid, para luego pasar a un análisis más pormenorizado de la siguiente forma: Madrid Ciudad, conjunto de ciudades de relevancia y el conjunto de ciudades y pueblos fuera de los principales núcleos de población.\n",
     "\n",
-    "> Se analizarán los datos en su conjunto para luego incidir en la distribución espacial del voto de los partidos que finalmente obtuvieron representación. Un análisis de la edad de la población en cada uno de los espacios (edad, nivel adquisitivo, etc) nos permitirá saber si exise un claro perfil de votante para cada uno de los partidos."
+    "Se analizarán los datos en su conjunto para luego incidir en la distribución espacial del voto de los partidos que finalmente obtuvieron representación. Un análisis de la edad de la población en cada uno de los espacios (edad, nivel adquisitivo, etc) nos permitirá saber si exise un claro perfil de votante para cada uno de los partidos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# leer csv:\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_table('Elecciones_Madrid_2021_Municipios.csv', delimiter=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Codcir</th>\n",
+       "      <th>Codmun</th>\n",
+       "      <th>Municipio</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Censo</th>\n",
+       "      <th>Certif. Alta</th>\n",
+       "      <th>Censo Total</th>\n",
+       "      <th>Votos Totales</th>\n",
+       "      <th>Votos Blancos</th>\n",
+       "      <th>Votos Nulos</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PCOE-PCPE</th>\n",
+       "      <th>VOLT</th>\n",
+       "      <th>VOX</th>\n",
+       "      <th>P-LIB</th>\n",
+       "      <th>POLE</th>\n",
+       "      <th>MÁS MADRID</th>\n",
+       "      <th>EB</th>\n",
+       "      <th>UDEC</th>\n",
+       "      <th>PODEMOS-IU</th>\n",
+       "      <th>RECORTES CERO-PCAS-TC-GV-M</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Ajalvir</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.251</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.251</td>\n",
+       "      <td>2.339</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>340.000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>330.000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>101.000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Alameda del Valle</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>195</td>\n",
+       "      <td>0</td>\n",
+       "      <td>195</td>\n",
+       "      <td>168</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>36.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Alcalá de Henares</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>136.163</td>\n",
+       "      <td>4</td>\n",
+       "      <td>136.167</td>\n",
+       "      <td>100.932</td>\n",
+       "      <td>603.0</td>\n",
+       "      <td>789.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>9.735</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>15.540</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>7.017</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>28</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Alcobendas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>80.401</td>\n",
+       "      <td>2</td>\n",
+       "      <td>80.403</td>\n",
+       "      <td>62.036</td>\n",
+       "      <td>297.0</td>\n",
+       "      <td>363.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>5.533</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.212</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>3.430</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Alcorcón</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>126.919</td>\n",
+       "      <td>0</td>\n",
+       "      <td>126.919</td>\n",
+       "      <td>97.563</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>769.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>7.841</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>16.945</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>7.707</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Codcir  Codmun          Municipio  Unnamed: 3    Censo  Certif. Alta  \\\n",
+       "0     28     2.0            Ajalvir         NaN    3.251             0   \n",
+       "1     28     3.0  Alameda del Valle         NaN      195             0   \n",
+       "2     28     5.0  Alcalá de Henares         NaN  136.163             4   \n",
+       "3     28     6.0         Alcobendas         NaN   80.401             2   \n",
+       "4     28     7.0           Alcorcón         NaN  126.919             0   \n",
+       "\n",
+       "  Censo Total Votos Totales  Votos Blancos  Votos Nulos  ... PCOE-PCPE  VOLT  \\\n",
+       "0       3.251         2.339           10.0         15.0  ...       0.0   0.0   \n",
+       "1         195           168            3.0          0.0  ...       0.0   0.0   \n",
+       "2     136.167       100.932          603.0        789.0  ...      25.0  45.0   \n",
+       "3      80.403        62.036          297.0        363.0  ...      12.0  36.0   \n",
+       "4     126.919        97.563          565.0        769.0  ...      20.0  35.0   \n",
+       "\n",
+       "       VOX  P-LIB  POLE  MÁS MADRID     EB  UDEC  PODEMOS-IU  \\\n",
+       "0  340.000    1.0   0.0     330.000    1.0   1.0     101.000   \n",
+       "1   16.000    0.0   0.0      36.000    0.0   0.0      11.000   \n",
+       "2    9.735   21.0  10.0      15.540   70.0  26.0       7.017   \n",
+       "3    5.533   24.0   8.0       8.212   60.0  44.0       3.430   \n",
+       "4    7.841   14.0   4.0      16.945  128.0  24.0       7.707   \n",
+       "\n",
+       "   RECORTES CERO-PCAS-TC-GV-M  \n",
+       "0                         0.0  \n",
+       "1                         0.0  \n",
+       "2                        29.0  \n",
+       "3                        26.0  \n",
+       "4                        66.0  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
    ]
   },
   {
