se visualiza Madrid 2

--- a/MadridElections.ipynb
+++ b/MadridElections.ipynb
@@ -603,7 +603,7 @@
    "source": [
     "# pruebas elecciones\n",
     "# siguiente paso: añadirle al dataframe \"data\" la columna 'geometry' de \"map_municipios\" \n",
-    "# agrupando por código postal"
+    "# agrupando por código postal, código de municipio, etc"
    ]
   }
  ],
