falta añadir info geográfica

--- a/web_scrapping_test.ipynb
+++ b/web_scrapping_test.ipynb
@@ -14739,7 +14739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "4a05847d",
    "metadata": {},
    "outputs": [
@@ -14765,6 +14765,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>municipio</th>\n",
+       "      <th>link</th>\n",
        "      <th>psoe</th>\n",
        "      <th>psoe_porcentaje</th>\n",
        "      <th>pp</th>\n",
@@ -14773,8 +14774,8 @@
        "      <th>cs_porcentaje</th>\n",
        "      <th>vox</th>\n",
        "      <th>vox_porcentaje</th>\n",
-       "      <th>mas_madrid</th>\n",
        "      <th>...</th>\n",
+       "      <th>upyd</th>\n",
        "      <th>upyd_porcentaje</th>\n",
        "      <th>ph</th>\n",
        "      <th>ph_porcentaje</th>\n",
@@ -14784,13 +14785,13 @@
        "      <th>p_lib_porcentaje</th>\n",
        "      <th>uleg</th>\n",
        "      <th>uleg_porcentaje</th>\n",
-       "      <th>link</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Ajalvir</td>\n",
+       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "      <td>532</td>\n",
        "      <td>24.56</td>\n",
        "      <td>521</td>\n",
@@ -14799,8 +14800,8 @@
        "      <td>21.05</td>\n",
        "      <td>274</td>\n",
        "      <td>12.65</td>\n",
-       "      <td>224</td>\n",
        "      <td>...</td>\n",
+       "      <td>3</td>\n",
        "      <td>0.14</td>\n",
        "      <td>1</td>\n",
        "      <td>0.05</td>\n",
@@ -14810,11 +14811,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Alameda del Valle</td>\n",
+       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "      <td>54</td>\n",
        "      <td>38.57</td>\n",
        "      <td>41</td>\n",
@@ -14823,7 +14824,6 @@
        "      <td>13.57</td>\n",
        "      <td>8</td>\n",
        "      <td>5.71</td>\n",
-       "      <td>12</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -14834,11 +14834,12 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Alcalá de Henares</td>\n",
+       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "      <td>28.759</td>\n",
        "      <td>32.28</td>\n",
        "      <td>15.953</td>\n",
@@ -14847,8 +14848,8 @@
        "      <td>20.34</td>\n",
        "      <td>8.094</td>\n",
        "      <td>9.09</td>\n",
-       "      <td>10.975</td>\n",
        "      <td>...</td>\n",
+       "      <td>138</td>\n",
        "      <td>0.15</td>\n",
        "      <td>61</td>\n",
        "      <td>0.07</td>\n",
@@ -14858,11 +14859,11 @@
        "      <td>0.03</td>\n",
        "      <td>8</td>\n",
        "      <td>0.01</td>\n",
-       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Alcobendas</td>\n",
+       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "      <td>15.338</td>\n",
        "      <td>28.12</td>\n",
        "      <td>13.844</td>\n",
@@ -14871,8 +14872,8 @@
        "      <td>20.22</td>\n",
        "      <td>4.901</td>\n",
        "      <td>8.98</td>\n",
-       "      <td>6.047</td>\n",
        "      <td>...</td>\n",
+       "      <td>74</td>\n",
        "      <td>0.14</td>\n",
        "      <td>33</td>\n",
        "      <td>0.06</td>\n",
@@ -14882,11 +14883,11 @@
        "      <td>0.03</td>\n",
        "      <td>15</td>\n",
        "      <td>0.03</td>\n",
-       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Alcorcón</td>\n",
+       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "      <td>27.492</td>\n",
        "      <td>31.48</td>\n",
        "      <td>16.844</td>\n",
@@ -14895,8 +14896,8 @@
        "      <td>18.57</td>\n",
        "      <td>6.441</td>\n",
        "      <td>7.38</td>\n",
-       "      <td>12.227</td>\n",
        "      <td>...</td>\n",
+       "      <td>92</td>\n",
        "      <td>0.11</td>\n",
        "      <td>40</td>\n",
        "      <td>0.05</td>\n",
@@ -14906,7 +14907,6 @@
        "      <td>0.03</td>\n",
        "      <td>18</td>\n",
        "      <td>0.02</td>\n",
-       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -14935,6 +14935,7 @@
        "    <tr>\n",
        "      <th>173</th>\n",
        "      <td>Villar del Olmo</td>\n",
+       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "      <td>229</td>\n",
        "      <td>24.26</td>\n",
        "      <td>249</td>\n",
@@ -14943,8 +14944,8 @@
        "      <td>18.54</td>\n",
        "      <td>122</td>\n",
        "      <td>12.92</td>\n",
-       "      <td>105</td>\n",
        "      <td>...</td>\n",
+       "      <td>3</td>\n",
        "      <td>0.32</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -14954,11 +14955,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>174</th>\n",
        "      <td>Villarejo de Salvanés</td>\n",
+       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "      <td>1.488</td>\n",
        "      <td>38.71</td>\n",
        "      <td>778</td>\n",
@@ -14967,8 +14968,8 @@
        "      <td>21.83</td>\n",
        "      <td>263</td>\n",
        "      <td>6.84</td>\n",
-       "      <td>261</td>\n",
        "      <td>...</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.1</td>\n",
        "      <td>2</td>\n",
        "      <td>0.05</td>\n",
@@ -14978,11 +14979,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>175</th>\n",
        "      <td>Villaviciosa de Odón</td>\n",
+       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "      <td>2.762</td>\n",
        "      <td>18.36</td>\n",
        "      <td>4.628</td>\n",
@@ -14991,8 +14992,8 @@
        "      <td>22.7</td>\n",
        "      <td>1.956</td>\n",
        "      <td>13</td>\n",
-       "      <td>1.508</td>\n",
        "      <td>...</td>\n",
+       "      <td>18</td>\n",
        "      <td>0.12</td>\n",
        "      <td>5</td>\n",
        "      <td>0.03</td>\n",
@@ -15002,11 +15003,11 @@
        "      <td>0.07</td>\n",
        "      <td>3</td>\n",
        "      <td>0.02</td>\n",
-       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>176</th>\n",
        "      <td>Villavieja del Lozoya</td>\n",
+       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "      <td>47</td>\n",
        "      <td>28.83</td>\n",
        "      <td>40</td>\n",
@@ -15015,8 +15016,8 @@
        "      <td>14.11</td>\n",
        "      <td>16</td>\n",
        "      <td>9.82</td>\n",
-       "      <td>18</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.61</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -15026,11 +15027,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>177</th>\n",
        "      <td>Zarzalejo</td>\n",
+       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "      <td>244</td>\n",
        "      <td>30.2</td>\n",
        "      <td>193</td>\n",
@@ -15039,8 +15040,8 @@
        "      <td>9.53</td>\n",
        "      <td>60</td>\n",
        "      <td>7.43</td>\n",
-       "      <td>102</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "      <td>0.12</td>\n",
@@ -15050,7 +15051,6 @@
        "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>https://resultados.elpais.com/elecciones/2019/...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -15058,90 +15058,87 @@
        "</div>"
       ],
       "text/plain": [
-       "                 municipio    psoe psoe_porcentaje      pp pp_porcentaje  \\\n",
-       "0                  Ajalvir     532           24.56     521         24.05   \n",
-       "1        Alameda del Valle      54           38.57      41         29.29   \n",
-       "2        Alcalá de Henares  28.759           32.28  15.953         17.91   \n",
-       "3               Alcobendas  15.338           28.12  13.844         25.38   \n",
-       "4                 Alcorcón  27.492           31.48  16.844         19.29   \n",
-       "..                     ...     ...             ...     ...           ...   \n",
-       "173        Villar del Olmo     229           24.26     249         26.38   \n",
-       "174  Villarejo de Salvanés   1.488           38.71     778         20.24   \n",
-       "175   Villaviciosa de Odón   2.762           18.36   4.628         30.76   \n",
-       "176  Villavieja del Lozoya      47           28.83      40         24.54   \n",
-       "177              Zarzalejo     244            30.2     193         23.89   \n",
+       "                 municipio                                               link  \\\n",
+       "0                  Ajalvir  https://resultados.elpais.com/elecciones/2019/...   \n",
+       "1        Alameda del Valle  https://resultados.elpais.com/elecciones/2019/...   \n",
+       "2        Alcalá de Henares  https://resultados.elpais.com/elecciones/2019/...   \n",
+       "3               Alcobendas  https://resultados.elpais.com/elecciones/2019/...   \n",
+       "4                 Alcorcón  https://resultados.elpais.com/elecciones/2019/...   \n",
+       "..                     ...                                                ...   \n",
+       "173        Villar del Olmo  https://resultados.elpais.com/elecciones/2019/...   \n",
+       "174  Villarejo de Salvanés  https://resultados.elpais.com/elecciones/2019/...   \n",
+       "175   Villaviciosa de Odón  https://resultados.elpais.com/elecciones/2019/...   \n",
+       "176  Villavieja del Lozoya  https://resultados.elpais.com/elecciones/2019/...   \n",
+       "177              Zarzalejo  https://resultados.elpais.com/elecciones/2019/...   \n",
        "\n",
-       "         cs cs_porcentaje    vox vox_porcentaje mas_madrid  ...  \\\n",
-       "0       456         21.05    274          12.65        224  ...   \n",
-       "1        19         13.57      8           5.71         12  ...   \n",
-       "2    18.120         20.34  8.094           9.09     10.975  ...   \n",
-       "3    11.032         20.22  4.901           8.98      6.047  ...   \n",
-       "4    16.214         18.57  6.441           7.38     12.227  ...   \n",
-       "..      ...           ...    ...            ...        ...  ...   \n",
-       "173     175         18.54    122          12.92        105  ...   \n",
-       "174     839         21.83    263           6.84        261  ...   \n",
-       "175   3.416          22.7  1.956             13      1.508  ...   \n",
-       "176      23         14.11     16           9.82         18  ...   \n",
-       "177      77          9.53     60           7.43        102  ...   \n",
+       "       psoe psoe_porcentaje      pp pp_porcentaje      cs cs_porcentaje  \\\n",
+       "0       532           24.56     521         24.05     456         21.05   \n",
+       "1        54           38.57      41         29.29      19         13.57   \n",
+       "2    28.759           32.28  15.953         17.91  18.120         20.34   \n",
+       "3    15.338           28.12  13.844         25.38  11.032         20.22   \n",
+       "4    27.492           31.48  16.844         19.29  16.214         18.57   \n",
+       "..      ...             ...     ...           ...     ...           ...   \n",
+       "173     229           24.26     249         26.38     175         18.54   \n",
+       "174   1.488           38.71     778         20.24     839         21.83   \n",
+       "175   2.762           18.36   4.628         30.76   3.416          22.7   \n",
+       "176      47           28.83      40         24.54      23         14.11   \n",
+       "177     244            30.2     193         23.89      77          9.53   \n",
        "\n",
-       "    upyd_porcentaje   ph ph_porcentaje pcas_tc pcas_tc_porcentaje p_lib  \\\n",
-       "0              0.14    1          0.05       1               0.05   NaN   \n",
-       "1               NaN  NaN           NaN     NaN                NaN   NaN   \n",
-       "2              0.15   61          0.07      39               0.04    28   \n",
-       "3              0.14   33          0.06      23               0.04    16   \n",
-       "4              0.11   40          0.05      50               0.06    23   \n",
-       "..              ...  ...           ...     ...                ...   ...   \n",
-       "173            0.32  NaN           NaN     NaN                NaN   NaN   \n",
-       "174             0.1    2          0.05       2               0.05   NaN   \n",
-       "175            0.12    5          0.03       2               0.01    11   \n",
-       "176            0.61  NaN           NaN     NaN                NaN   NaN   \n",
-       "177             NaN    1          0.12       1               0.12     2   \n",
+       "       vox vox_porcentaje  ... upyd upyd_porcentaje   ph ph_porcentaje  \\\n",
+       "0      274          12.65  ...    3            0.14    1          0.05   \n",
+       "1        8           5.71  ...  NaN             NaN  NaN           NaN   \n",
+       "2    8.094           9.09  ...  138            0.15   61          0.07   \n",
+       "3    4.901           8.98  ...   74            0.14   33          0.06   \n",
+       "4    6.441           7.38  ...   92            0.11   40          0.05   \n",
+       "..     ...            ...  ...  ...             ...  ...           ...   \n",
+       "173    122          12.92  ...    3            0.32  NaN           NaN   \n",
+       "174    263           6.84  ...    4             0.1    2          0.05   \n",
+       "175  1.956             13  ...   18            0.12    5          0.03   \n",
+       "176     16           9.82  ...    1            0.61  NaN           NaN   \n",
+       "177     60           7.43  ...  NaN             NaN    1          0.12   \n",
        "\n",
-       "    p_lib_porcentaje uleg uleg_porcentaje  \\\n",
-       "0                NaN  NaN             NaN   \n",
-       "1                NaN  NaN             NaN   \n",
-       "2               0.03    8            0.01   \n",
-       "3               0.03   15            0.03   \n",
-       "4               0.03   18            0.02   \n",
-       "..               ...  ...             ...   \n",
-       "173              NaN  NaN             NaN   \n",
-       "174              NaN  NaN             NaN   \n",
-       "175             0.07    3            0.02   \n",
-       "176              NaN  NaN             NaN   \n",
-       "177             0.25  NaN             NaN   \n",
-       "\n",
-       "                                                  link  \n",
-       "0    https://resultados.elpais.com/elecciones/2019/...  \n",
-       "1    https://resultados.elpais.com/elecciones/2019/...  \n",
-       "2    https://resultados.elpais.com/elecciones/2019/...  \n",
-       "3    https://resultados.elpais.com/elecciones/2019/...  \n",
-       "4    https://resultados.elpais.com/elecciones/2019/...  \n",
-       "..                                                 ...  \n",
-       "173  https://resultados.elpais.com/elecciones/2019/...  \n",
-       "174  https://resultados.elpais.com/elecciones/2019/...  \n",
-       "175  https://resultados.elpais.com/elecciones/2019/...  \n",
-       "176  https://resultados.elpais.com/elecciones/2019/...  \n",
-       "177  https://resultados.elpais.com/elecciones/2019/...  \n",
+       "    pcas_tc pcas_tc_porcentaje p_lib p_lib_porcentaje uleg uleg_porcentaje  \n",
+       "0         1               0.05   NaN              NaN  NaN             NaN  \n",
+       "1       NaN                NaN   NaN              NaN  NaN             NaN  \n",
+       "2        39               0.04    28             0.03    8            0.01  \n",
+       "3        23               0.04    16             0.03   15            0.03  \n",
+       "4        50               0.06    23             0.03   18            0.02  \n",
+       "..      ...                ...   ...              ...  ...             ...  \n",
+       "173     NaN                NaN   NaN              NaN  NaN             NaN  \n",
+       "174       2               0.05   NaN              NaN  NaN             NaN  \n",
+       "175       2               0.01    11             0.07    3            0.02  \n",
+       "176     NaN                NaN   NaN              NaN  NaN             NaN  \n",
+       "177       1               0.12     2             0.25  NaN             NaN  \n",
        "\n",
        "[178 rows x 32 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#change column positions:\n",
     "first_column = df.pop('municipio')\n",
-    "second_column = df.pop()\n",
+    "second_column = df.pop('link')\n",
     "df.insert(0, 'municipio', first_column)\n",
+    "df.insert(1, 'link', second_column)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01117472",
+   "metadata": {},
+   "source": [
+    "## Añadir info geoespacial al dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bcbde3f",
+   "id": "d7dd9255",
    "metadata": {},
    "outputs": [],
    "source": []
