--- a/web_scrapping_test.ipynb
+++ b/web_scrapping_test.ipynb
@@ -3931,12 +3931,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "id": "2c8adddd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<li><a href=\"28/02.html\">Ajalvir</a></li>,\n",
+       " <li><a href=\"28/03.html\">Alameda del Valle</a></li>,\n",
+       " <li><a href=\"28/05.html\">Alcalá de Henares</a></li>,\n",
+       " <li><a href=\"28/06.html\">Alcobendas</a></li>,\n",
+       " <li><a href=\"28/07.html\">Alcorcón</a></li>,\n",
+       " <li><a href=\"28/08.html\">Aldea del Fresno</a></li>,\n",
+       " <li><a href=\"28/09.html\">Algete</a></li>,\n",
+       " <li><a href=\"28/10.html\">Alpedrete</a></li>,\n",
+       " <li><a href=\"28/11.html\">Ambite</a></li>,\n",
+       " <li><a href=\"28/12.html\">Anchuelo</a></li>,\n",
+       " <li><a href=\"28/13.html\">Aranjuez</a></li>,\n",
+       " <li><a href=\"28/14.html\">Arganda del Rey</a></li>,\n",
+       " <li><a href=\"28/15.html\">Arroyomolinos</a></li>,\n",
+       " <li><a href=\"28/17.html\">Batres</a></li>,\n",
+       " <li><a href=\"28/18.html\">Becerril de la Sierra</a></li>,\n",
+       " <li><a href=\"28/19.html\">Belmonte de Tajo</a></li>,\n",
+       " <li><a href=\"28/20.html\">Berzosa del Lozoya</a></li>,\n",
+       " <li><a href=\"28/22.html\">Boadilla del Monte</a></li>,\n",
+       " <li><a href=\"28/24.html\">Braojos</a></li>,\n",
+       " <li><a href=\"28/25.html\">Brea de Tajo</a></li>,\n",
+       " <li><a href=\"28/26.html\">Brunete</a></li>,\n",
+       " <li><a href=\"28/27.html\">Buitrago del Lozoya</a></li>,\n",
+       " <li><a href=\"28/28.html\">Bustarviejo</a></li>,\n",
+       " <li><a href=\"28/29.html\">Cabanillas de la Sierra</a></li>,\n",
+       " <li><a href=\"28/31.html\">Cadalso de los Vidrios</a></li>,\n",
+       " <li><a href=\"28/32.html\">Camarma de Esteruelas</a></li>,\n",
+       " <li><a href=\"28/33.html\">Campo Real</a></li>,\n",
+       " <li><a href=\"28/34.html\">Canencia</a></li>,\n",
+       " <li><a href=\"28/35.html\">Carabaña</a></li>,\n",
+       " <li><a href=\"28/36.html\">Casarrubuelos</a></li>,\n",
+       " <li><a href=\"28/37.html\">Cenicientos</a></li>,\n",
+       " <li><a href=\"28/38.html\">Cercedilla</a></li>,\n",
+       " <li><a href=\"28/39.html\">Cervera de Buitrago</a></li>,\n",
+       " <li><a href=\"28/51.html\">Chapinería</a></li>,\n",
+       " <li><a href=\"28/52.html\">Chinchón</a></li>,\n",
+       " <li><a href=\"28/40.html\">Ciempozuelos</a></li>,\n",
+       " <li><a href=\"28/41.html\">Cobeña</a></li>,\n",
+       " <li><a href=\"28/46.html\">Collado Mediano</a></li>,\n",
+       " <li><a href=\"28/47.html\">Collado Villalba</a></li>,\n",
+       " <li><a href=\"28/42.html\">Colmenar del Arroyo</a></li>,\n",
+       " <li><a href=\"28/43.html\">Colmenar de Oreja</a></li>,\n",
+       " <li><a href=\"28/44.html\">Colmenarejo</a></li>,\n",
+       " <li><a href=\"28/45.html\">Colmenar Viejo</a></li>,\n",
+       " <li><a href=\"28/48.html\">Corpa</a></li>,\n",
+       " <li><a href=\"28/49.html\">Coslada</a></li>,\n",
+       " <li><a href=\"28/50.html\">Cubas de la Sagra</a></li>,\n",
+       " <li><a href=\"28/53.html\">Daganzo de Arriba</a></li>,\n",
+       " <li><a href=\"28/04.html\">El Álamo</a></li>,\n",
+       " <li><a href=\"28/16.html\">El Atazar</a></li>,\n",
+       " <li><a href=\"28/21.html\">El Berrueco</a></li>,\n",
+       " <li><a href=\"28/23.html\">El Boalo</a></li>,\n",
+       " <li><a href=\"28/54.html\">El Escorial</a></li>,\n",
+       " <li><a href=\"28/86.html\">El Molar</a></li>,\n",
+       " <li><a href=\"28/168.html\">El Vellón</a></li>,\n",
+       " <li><a href=\"28/55.html\">Estremera</a></li>,\n",
+       " <li><a href=\"28/56.html\">Fresnedillas de la Oliva</a></li>,\n",
+       " <li><a href=\"28/57.html\">Fresno de Torote</a></li>,\n",
+       " <li><a href=\"28/58.html\">Fuenlabrada</a></li>,\n",
+       " <li><a href=\"28/59.html\">Fuente el Saz de Jarama</a></li>,\n",
+       " <li><a href=\"28/60.html\">Fuentidueña de Tajo</a></li>,\n",
+       " <li><a href=\"28/61.html\">Galapagar</a></li>,\n",
+       " <li><a href=\"28/62.html\">Garganta de los Montes</a></li>,\n",
+       " <li><a href=\"28/63.html\">Gargantilla del Lozoya y Pinilla de Buitrago</a></li>,\n",
+       " <li><a href=\"28/64.html\">Gascones</a></li>,\n",
+       " <li><a href=\"28/65.html\">Getafe</a></li>,\n",
+       " <li><a href=\"28/66.html\">Griñón</a></li>,\n",
+       " <li><a href=\"28/67.html\">Guadalix de la Sierra</a></li>,\n",
+       " <li><a href=\"28/68.html\">Guadarrama</a></li>,\n",
+       " <li><a href=\"28/70.html\">Horcajo de la Sierra-Aoslos</a></li>,\n",
+       " <li><a href=\"28/71.html\">Horcajuelo de la Sierra</a></li>,\n",
+       " <li><a href=\"28/72.html\">Hoyo de Manzanares</a></li>,\n",
+       " <li><a href=\"28/73.html\">Humanes de Madrid</a></li>,\n",
+       " <li><a href=\"28/30.html\">La Cabrera</a></li>,\n",
+       " <li><a href=\"28/69.html\">La Hiruela</a></li>,\n",
+       " <li><a href=\"28/138.html\">La Serna del Monte</a></li>,\n",
+       " <li><a href=\"28/127.html\">Las Rozas de Madrid</a></li>,\n",
+       " <li><a href=\"28/74.html\">Leganés</a></li>,\n",
+       " <li><a href=\"28/75.html\">Loeches</a></li>,\n",
+       " <li><a href=\"28/87.html\">Los Molinos</a></li>,\n",
+       " <li><a href=\"28/137.html\">Los Santos de la Humosa</a></li>,\n",
+       " <li><a href=\"28/76.html\">Lozoya</a></li>,\n",
+       " <li><a href=\"28/901.html\">Lozoyuela-Navas-Sieteiglesias</a></li>,\n",
+       " <li><a href=\"28/78.html\">Madarcos</a></li>,\n",
+       " <li><a href=\"28/79.html\">Madrid</a></li>,\n",
+       " <li><a href=\"28/80.html\">Majadahonda</a></li>,\n",
+       " <li><a href=\"28/82.html\">Manzanares el Real</a></li>,\n",
+       " <li><a href=\"28/83.html\">Meco</a></li>,\n",
+       " <li><a href=\"28/84.html\">Mejorada del Campo</a></li>,\n",
+       " <li><a href=\"28/85.html\">Miraflores de la Sierra</a></li>,\n",
+       " <li><a href=\"28/88.html\">Montejo de la Sierra</a></li>,\n",
+       " <li><a href=\"28/89.html\">Moraleja de Enmedio</a></li>,\n",
+       " <li><a href=\"28/90.html\">Moralzarzal</a></li>,\n",
+       " <li><a href=\"28/91.html\">Morata de Tajuña</a></li>,\n",
+       " <li><a href=\"28/92.html\">Móstoles</a></li>,\n",
+       " <li><a href=\"28/93.html\">Navacerrada</a></li>,\n",
+       " <li><a href=\"28/94.html\">Navalafuente</a></li>,\n",
+       " <li><a href=\"28/95.html\">Navalagamella</a></li>,\n",
+       " <li><a href=\"28/96.html\">Navalcarnero</a></li>,\n",
+       " <li><a href=\"28/97.html\">Navarredonda y San Mamés</a></li>,\n",
+       " <li><a href=\"28/99.html\">Navas del Rey</a></li>,\n",
+       " <li><a href=\"28/100.html\">Nuevo Baztán</a></li>,\n",
+       " <li><a href=\"28/101.html\">Olmeda de las Fuentes</a></li>,\n",
+       " <li><a href=\"28/102.html\">Orusco de Tajuña</a></li>,\n",
+       " <li><a href=\"28/104.html\">Paracuellos de Jarama</a></li>,\n",
+       " <li><a href=\"28/106.html\">Parla</a></li>,\n",
+       " <li><a href=\"28/107.html\">Patones</a></li>,\n",
+       " <li><a href=\"28/108.html\">Pedrezuela</a></li>,\n",
+       " <li><a href=\"28/109.html\">Pelayos de la Presa</a></li>,\n",
+       " <li><a href=\"28/110.html\">Perales de Tajuña</a></li>,\n",
+       " <li><a href=\"28/111.html\">Pezuela de las Torres</a></li>,\n",
+       " <li><a href=\"28/112.html\">Pinilla del Valle</a></li>,\n",
+       " <li><a href=\"28/113.html\">Pinto</a></li>,\n",
+       " <li><a href=\"28/114.html\">Piñuécar-Gandullas</a></li>,\n",
+       " <li><a href=\"28/115.html\">Pozuelo de Alarcón</a></li>,\n",
+       " <li><a href=\"28/116.html\">Pozuelo del Rey</a></li>,\n",
+       " <li><a href=\"28/117.html\">Prádena del Rincón</a></li>,\n",
+       " <li><a href=\"28/118.html\">Puebla de la Sierra</a></li>,\n",
+       " <li><a href=\"28/902.html\">Puentes Viejas</a></li>,\n",
+       " <li><a href=\"28/119.html\">Quijorna</a></li>,\n",
+       " <li><a href=\"28/120.html\">Rascafría</a></li>,\n",
+       " <li><a href=\"28/121.html\">Redueña</a></li>,\n",
+       " <li><a href=\"28/122.html\">Ribatejada</a></li>,\n",
+       " <li><a href=\"28/123.html\">Rivas-Vaciamadrid</a></li>,\n",
+       " <li><a href=\"28/124.html\">Robledillo de la Jara</a></li>,\n",
+       " <li><a href=\"28/125.html\">Robledo de Chavela</a></li>,\n",
+       " <li><a href=\"28/126.html\">Robregordo</a></li>,\n",
+       " <li><a href=\"28/128.html\">Rozas de Puerto Real</a></li>,\n",
+       " <li><a href=\"28/129.html\">San Agustín del Guadalix</a></li>,\n",
+       " <li><a href=\"28/130.html\">San Fernando de Henares</a></li>,\n",
+       " <li><a href=\"28/131.html\">San Lorenzo de El Escorial</a></li>,\n",
+       " <li><a href=\"28/132.html\">San Martín de la Vega</a></li>,\n",
+       " <li><a href=\"28/133.html\">San Martín de Valdeiglesias</a></li>,\n",
+       " <li><a href=\"28/134.html\">San Sebastián de los Reyes</a></li>,\n",
+       " <li><a href=\"28/135.html\">Santa María de la Alameda</a></li>,\n",
+       " <li><a href=\"28/136.html\">Santorcaz</a></li>,\n",
+       " <li><a href=\"28/140.html\">Serranillos del Valle</a></li>,\n",
+       " <li><a href=\"28/141.html\">Sevilla la Nueva</a></li>,\n",
+       " <li><a href=\"28/143.html\">Somosierra</a></li>,\n",
+       " <li><a href=\"28/144.html\">Soto del Real</a></li>,\n",
+       " <li><a href=\"28/145.html\">Talamanca de Jarama</a></li>,\n",
+       " <li><a href=\"28/146.html\">Tielmes</a></li>,\n",
+       " <li><a href=\"28/147.html\">Titulcia</a></li>,\n",
+       " <li><a href=\"28/148.html\">Torrejón de Ardoz</a></li>,\n",
+       " <li><a href=\"28/149.html\">Torrejón de la Calzada</a></li>,\n",
+       " <li><a href=\"28/150.html\">Torrejón de Velasco</a></li>,\n",
+       " <li><a href=\"28/151.html\">Torrelaguna</a></li>,\n",
+       " <li><a href=\"28/152.html\">Torrelodones</a></li>,\n",
+       " <li><a href=\"28/153.html\">Torremocha de Jarama</a></li>,\n",
+       " <li><a href=\"28/154.html\">Torres de la Alameda</a></li>,\n",
+       " <li><a href=\"28/903.html\">Tres Cantos</a></li>,\n",
+       " <li><a href=\"28/155.html\">Valdaracete</a></li>,\n",
+       " <li><a href=\"28/156.html\">Valdeavero</a></li>,\n",
+       " <li><a href=\"28/157.html\">Valdelaguna</a></li>,\n",
+       " <li><a href=\"28/158.html\">Valdemanco</a></li>,\n",
+       " <li><a href=\"28/159.html\">Valdemaqueda</a></li>,\n",
+       " <li><a href=\"28/160.html\">Valdemorillo</a></li>,\n",
+       " <li><a href=\"28/161.html\">Valdemoro</a></li>,\n",
+       " <li><a href=\"28/162.html\">Valdeolmos-Alalpardo</a></li>,\n",
+       " <li><a href=\"28/163.html\">Valdepiélagos</a></li>,\n",
+       " <li><a href=\"28/164.html\">Valdetorres de Jarama</a></li>,\n",
+       " <li><a href=\"28/165.html\">Valdilecha</a></li>,\n",
+       " <li><a href=\"28/166.html\">Valverde de Alcalá</a></li>,\n",
+       " <li><a href=\"28/167.html\">Velilla de San Antonio</a></li>,\n",
+       " <li><a href=\"28/169.html\">Venturada</a></li>,\n",
+       " <li><a href=\"28/170.html\">Villaconejos</a></li>,\n",
+       " <li><a href=\"28/171.html\">Villa del Prado</a></li>,\n",
+       " <li><a href=\"28/172.html\">Villalbilla</a></li>,\n",
+       " <li><a href=\"28/173.html\">Villamanrique de Tajo</a></li>,\n",
+       " <li><a href=\"28/174.html\">Villamanta</a></li>,\n",
+       " <li><a href=\"28/175.html\">Villamantilla</a></li>,\n",
+       " <li><a href=\"28/176.html\">Villanueva de la Cañada</a></li>,\n",
+       " <li><a href=\"28/177.html\">Villanueva del Pardillo</a></li>,\n",
+       " <li><a href=\"28/178.html\">Villanueva de Perales</a></li>,\n",
+       " <li><a href=\"28/179.html\">Villar del Olmo</a></li>,\n",
+       " <li><a href=\"28/180.html\">Villarejo de Salvanés</a></li>,\n",
+       " <li><a href=\"28/181.html\">Villaviciosa de Odón</a></li>,\n",
+       " <li><a href=\"28/182.html\">Villavieja del Lozoya</a></li>,\n",
+       " <li><a href=\"28/183.html\">Zarzalejo</a></li>]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "lis = ul.find_all('li') "
+    "lis = ul.find_all('li') \n",
+    "lis"
    ]
   },
   {
@@ -21007,7 +21196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47e8760e",
+   "id": "4dd9d37e",
    "metadata": {},
    "outputs": [],
    "source": []
